2002-08-29  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-playlist.c: (gtk_playlist_add_files),
	(gtk_playlist_init):
	* src/totem.c: (on_open1_activate): make file selectors remember the
	path they were in (Closes: #91894)

2002-08-29  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_class_init), (gtk_xine_instance_init),
	(video_window_translate_point), (xine_thread), (gtk_xine_realize),
	(gtk_xine_idle_signal), (xine_event), (gtk_xine_set_fullscreen):
	* src/gtk-xine.h: kill the use of GtkInvisible for the fullscreen
	window (this fixes the DVD menus in fullscreen), and handle the key
	presses in the xine_thread, kill the GC
	* src/totem.c: (action_handle_key), (on_video_key_release_event),
	(on_window_key_press_event), (totem_callback_connect),
	(video_widget_create): some cleanups in the kbd handling, and upd wrt
	changes in GtkXine

2002-08-28  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-playlist.c: (gtk_playlist_finalize): add a bit more checks
	* src/gtk-xine.c: (video_window_translate_point),
	(generate_mouse_event), (xine_thread): add generation of the necessary
	xine mouse events to make DVD menus work

2002-08-28  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (frame_output_cb), (xine_thread):
	re-enable Expose event compression, should fix weird slow-downs

2002-08-28  Bastien Nocera  <hadess@hadess.net>

	* README: upd
	* data/Makefile.am: desktop_in_files in the EXTRA_DIST, not
	desktop_DATA

2002-08-28  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_get_mrls):
	* src/gtk-xine.h: return const char **
	* src/totem.c: (action_play_media): don't g_strfreev the mrls,
	and actually add them to the playlist, works better

2002-08-27  Bastien Nocera  <hadess@hadess.net>

	* src/gtk-xine.c: (gtk_xine_instance_init),
	(load_audio_out_driver), (gtk_xine_realize),
	(gtk_xine_is_fullscreen), (gtk_xine_get_current_time),
	(gtk_xine_get_stream_length), (gtk_xine_is_playing),