@@ -1,5 +1,11 @@
 2002-08-29  Bastien Nocera  <hadess@hadess.net>
 
+	* src/video-utils.c: (old_wmspec_set_fullscreen),
+	(gdk_window_set_fullscreen): add support for the old wm-spec, not
+	tested (Closes: #91937)
+
+2002-08-29  Bastien Nocera  <hadess@hadess.net>
+
 	* src/gtk-playlist.c: (gtk_playlist_add_files),
 	(gtk_playlist_init):
 	* src/totem.c: (on_open1_activate): make file selectors remember the
